enlarge the buttons

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 </div>
                 
                 <div id="button-holder" class="is-flex is-justify-content-space-around is-flex-wrap-wrap" style="width: 100%">
-                    <button id="rock" class="button is-primary has-size-1" value="rock">Rock</button>
-                    <button id="paper" class="button is-primary" value="paper">Paper</button>
-                    <button id="scissors" class="button is-primary" value="scissors">Scissors</button>
+                    <button id="rock" class="button is-primary is-large" value="rock">Rock</button>
+                    <button id="paper" class="button is-primary is-large" value="paper">Paper</button>
+                    <button id="scissors" class="button is-primary is-large" value="scissors">Scissors</button>
                 </div>     
             </div>
         </div>
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <div class="columns">
+    <div class="columns is-hidden-mobile">
         <div class="column is-4 mt-6  is-flex is-justify-content-center">
             <p id="user-symbol" class="is-size-1"></p>
         </div>
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <footer class="footer has-background-primary" style="position: fixed; left: 0; bottom: 0; width: 100%;">
+    <footer class="footer has-background-primary " style="margin-bottom:0%; width: 100%;">
         <div class="content has-text-centered has-text-link-light"><p>Created by TOP student</p></div>
     </footer>
     <script src="./script.js"></script>
